--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <link
+      rel="icon"
+      type="image/png"
+      href="/image/DALL·E 2023-01-19 20.57.48 - A chat icon with an owl.png"
+    />
   </head>
   <body>
     <main class="app">
