--- a/src/views/login.html
+++ b/src/views/login.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebChat | Seu lugar para papear e ficar de boa.</title>
-
+    <link
+      rel="icon"
+      type="image/png"
+      href="/image/DALL·E 2023-01-19 20.57.48 - A chat icon with an owl.png"
+    />
     <link rel="stylesheet" href="styles/login.css" />
   </head>
   <body>
