--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,7 @@
     <title>Webchat</title>
 
     <link rel="stylesheet" href="../styles/chat.css" />
+    <link rel="stylesheet" href="../styles/sidebar.css" />
 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -20,40 +21,72 @@
     />
   </head>
   <body>
-    <aside class="sidebar">
-      <button disabled="disabled">
-        <span class="material-icons"> chat_bubble </span>
-      </button>
+    <aside id="sidebar" class="sidebar">
+      <div class="logo_content">
+        <div class="logo">
+          <img
+            src="/image/DALL·E 2023-01-19 20.57.48 - A chat icon with an owl.png"
+          />
+          <div class="logo_name">Webchat</div>
+        </div>
+        <button id="side_menu_btn">
+          <span class="material-icons"> menu </span>
+        </button>
+      </div>
+      <ul class="nav_list">
+        <li>
+          <button disabled="disabled">
+            <a href="#">
+              <span class="material-icons"> chat_bubble </span>
+              <span class="links_name"> Conversas </span>
+            </a>
+          </button>
+          <span class="tooltip">Conversas</span>
+        </li>
+        <li>
+          <button disabled="disabled">
+            <a href="#">
+              <span class="material-icons"> videocam </span>
+              <span class="links_name"> Ligações </span>
+            </a>
+          </button>
+          <span class="tooltip">Ligações</span>
+        </li>
+      </ul>
+
+      <div class="profile_content">
+        <div class="profile">
+          <div class="profile_details">
+            <img src="../image/user-3296.svg" alt="" />
+            <div class="name_container">
+              <div id="profile_name" class="name"></div>
+              <div class="job">Desenvolvedor</div>
+            </div>
+          </div>
+          <span id="logout" class="material-icons"> logout </span>
+        </div>
+      </div>
     </aside>
+
     <main class="app">
       <section class="block-messages">
         <header class="chatlist-header">
-          <div title="Você" class="container-header-you">
-            <img src="../image/user-3296.svg" alt="" />
-            <p id="your-name-header" class="your-name-header">
-              Nome do Usuário
-            </p>
-          </div>
-          <span
-            id="new-chat"
-            class="material-icons"
-            title="Nova conversa"
-            style="margin: 0; font-size: 23px"
-          >
-            people
-          </span>
-          <div class="container-more-options">
-            <span id="more_vert" class="material-icons" title="Mais opções">
-              more_vert
-            </span>
-          </div>
-          <div id="overlay_menu_option" class="overlay_menu_options">
-            <ul id="menu_option" class="menu_option">
-              <li id="new-contact">Adicionar contato</li>
-              <li id="new-group-button">Novo grupo</li>
-              <li id="disconnect-button">Desconectar</li>
-            </ul>
-          </div>
+          <button id="new-contact" title="Adicionar contato">
+            <span style="font-size: 21px" class="material-icons"
+              >person_add</span
+            >
+          </button>
+
+          <button title="Criar grupo" id="new-group-button">
+            <span class="material-icons"> groups </span>
+          </button>
+
+          <button id="new-chat" title="Nova conversa">
+            <img
+              style="height: 16px; margin: 0"
+              src="../image/icons/edit.png"
+            />
+          </button>
         </header>
         <div class="container-search-chat">
           <span id="search-icon" class="material-icons"> search </span>
@@ -228,5 +261,6 @@
     <audio id="sound_new_message" src="../sounds/new_message.mp3"></audio>
     <script src="../scripts/socket.io/client-dist/socket.io.js"></script>
     <script src="../scripts/chat.js" type="module"></script>
+    <script src="../scripts/sidebar.js"></script>
   </body>
 </html>
