--- a/src/public/styles/sidebar.css
+++ b/src/public/styles/sidebar.css
@@ -247,3 +247,9 @@
   width: calc(100% - 240px);
   left: 268px;
 }
+
+.sidebar .active span,
+.sidebar .active a {
+  background: white;
+  color: black;
+}
