--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,9 +33,9 @@
           <span class="material-icons"> menu </span>
         </button>
       </div>
-      <ul class="nav_list">
+      <ul id="aside_buttons" class="nav_list">
         <li>
-          <button disabled="disabled">
+          <button class="active">
             <a href="#">
               <span class="material-icons"> chat_bubble </span>
               <span class="links_name"> Conversas </span>
@@ -44,7 +44,7 @@
           <span class="tooltip">Conversas</span>
         </li>
         <li>
-          <button disabled="disabled">
+          <button>
             <a href="#">
               <span class="material-icons"> videocam </span>
               <span class="links_name"> Ligações </span>
