--- a/src/views/login.html
+++ b/src/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebChat | Seu lugar para papear e ficar de boa.</title>
+    <title>MindMeet</title>
     <link
       rel="icon"
       type="image/png"
@@ -16,7 +16,7 @@
     <div class="welcome-login">
       <div class="container-login">
         <header class="header">
-          <h1>Bem vindo(a) ao WebChat!</h1>
+          <h1>Bem vindo(a) ao MindMeet!</h1>
           <p>Uma nova era de mensagens</p>
         </header>
         <form action="/auth/login" class="form-login" method="post">
