Agora transmitimos video

--- a/src/public/styles/calls.css
+++ b/src/public/styles/calls.css
@@ -213,6 +213,11 @@
   height: 15vh;
   border: solid white 1px;
   z-index: 4;
+  background-color: black;
+}
+
+.container_myCam video {
+  object-fit: cover;
 }
 
 .container_header_incall {
